Code template for  spark executors